--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,10 @@
         app:autoScrollMode="uniform"
         app:darkColor="@color/tagDark"
         app:lightColor="@color/tagLight"
+        app:startAngleX="0.1"
+        app:startAngleY="0.1"
         app:radiusPercent="0.6"
-        app:scrollSpeed="0.5" />
+        app:scrollSpeed="0.3" />
 
     <Button
         android:id="@+id/tag_text"
