--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="tagLight">#b1c914</color>
     <color name="tagDark">#206fa1</color>
+    <color name="tagColor">#774a4c</color>
 
 </resources>
